--- a/cv-template/index.html
+++ b/cv-template/index.html
@@ -23,7 +23,7 @@
                     <input type="text" id="avatar-url">
                     <button data-remodal-action="confirm" class="remodal-confirm">确定</button>
                 </div>
-                <h1 id="username" >ekCit</h1>
+                <h1 id="username" >曹永强</h1>
                 <h4 id="persona-tag" >Python / Web / 互联网教育</h4>
             </div>
             <div class="profile info-unit">
@@ -31,7 +31,7 @@
                 <hr>
                 <ul class="info-list">
                     <li>
-                        <label class="left-label">姓名</label><span class="label-value">XXX</span></li>
+                        <label class="left-label">姓名</label><span class="label-value">曹永强</span></li>
                     <li>
                         <label class="left-label">学历</label><span class="label-value">本科</span></li>
                     <li>
@@ -176,19 +176,19 @@
                         <p>
                             Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam。
                         </p>
-                    </li> 
+                    </li>
                     <li>
                         <h3>曾获统一冰红茶“再来一瓶”奖</h3>
                         <p>
                             Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam。
                         </p>
-                    </li> 
+                    </li>
                     <li>
                         <h3>这一行也是为了凑版面</h3>
                         <p>
                             Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam。
                         </p>
-                    </li>                     
+                    </li>
             </div>
             <div class="aboutme info-unit right-paragraph">
                 <h2 class="info-header"><i class="iconfont icon-flower"></i> <span class="info-title">自我评价</span></h2>
